[CMake] Ohhhh. God added make install to CMake \o/ Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,11 @@ endif()
 # Source dir
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
+# Other
+#set(CMAKE_BUILD_TYPE RELEASE)
 # Project name - wmfs
-project(wmfs C)
+set(PROJECT_NAME wmfs)
+project(${PROJECT_NAME} C)
 # Definition of the wmfs source
 set(wmfs_src
   wmfs.c
@@ -78,3 +81,15 @@ execute_process(
 set(CHANGELOG_FILE ${SOURCE_DIR}/CHANGELOG)
 file(WRITE ${CHANGELOG_FILE} ${WMFS_CHANGELOG})
 endif()
+
+set(PROJECT_DATA_PATH share/${PROJECT_NAME})
+set(PROJECT_LOGOS ${PROJECT_DATA_PATH}/logos)
+set(PROJECT_LOGOS_DIR ${SOURCE_DIR}/logos)
+set(PROJECT_TODO ${SOURCE_DIR}/TODO)
+set(PROJECT_README ${SOURCE_DIR}/README)
+set(PROJECT_CHANGELOG ${SOURCE_DIR}/CHANGELOG)
+set(PROJECT_DEFAULT_CONF ${SOURCE_DIR}/wmfsrc)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(DIRECTORY ${PROJECT_LOGOS_DIR} DESTINATION ${PROJECT_DATA_PATH})
+install(FILES ${PROJECT_TODO} ${PROJECT_README} ${PROJECT_CHANGELOG}
+  ${PROJECT_DEFAULT_CONF} DESTINATION ${PROJECT_DATA_PATH})
