--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 # Other
 #set(CMAKE_BUILD_TYPE RELEASE)
+option(WITH_LOGOS "install wmfs logos")
 # Project name - wmfs
 set(PROJECT_NAME wmfs)
 project(${PROJECT_NAME} C)
@@ -84,13 +85,18 @@ file(WRITE ${CHANGELOG_FILE} ${WMFS_CHANGELOG})
 endif()
 
 set(PROJECT_DATA_PATH share/${PROJECT_NAME})
-set(PROJECT_LOGOS ${PROJECT_DATA_PATH}/logos)
-set(PROJECT_LOGOS_DIR ${SOURCE_DIR}/logos)
 set(PROJECT_TODO ${SOURCE_DIR}/TODO)
 set(PROJECT_README ${SOURCE_DIR}/README)
 set(PROJECT_CHANGELOG ${SOURCE_DIR}/CHANGELOG)
 set(PROJECT_DEFAULT_CONF ${SOURCE_DIR}/wmfsrc)
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
-install(DIRECTORY ${PROJECT_LOGOS_DIR} DESTINATION ${PROJECT_DATA_PATH})
+
+if(WITH_LOGOS)
+  set(PROJECT_LOGOS ${PROJECT_DATA_PATH}/logos)
+  set(PROJECT_LOGOS_DIR ${SOURCE_DIR}/logos)
+  install(DIRECTORY ${PROJECT_LOGOS_DIR} DESTINATION ${PROJECT_DATA_PATH})
+  message("Install With logos")
+endif()
+
 install(FILES ${PROJECT_TODO} ${PROJECT_README} ${PROJECT_CHANGELOG}
   ${PROJECT_DEFAULT_CONF} DESTINATION ${PROJECT_DATA_PATH})
