[CMake] Add XDG directory to config.h.in Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/config.h.in
+++ b/config.h.in
@@ -40,5 +40,6 @@
 #define WMFS_COMPILE_BY         "@WMFS_COMPILE_BY@"
 #define WMFS_COMPILE_FLAGS      "@WMFS_COMPILE_FLAGS@"
 #define WMFS_LINKED_LIBS        "@WMFS_LINKED_LIBS@"
+#define XDG_CONFIG_DIR          "@XDG_CONFIG_DIR@"
 
 #endif /* CONFIG_H */
