[CMake] Copy wmfsrc to XDG directory Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,27 +174,6 @@ if(GENERATE_MANPAGES)
 endif()
 # }}}
 
-set(PROJECT_DATA_PATH share/${PROJECT_NAME})
-set(PROJECT_TODO ${SOURCE_DIR}/TODO)
-set(PROJECT_README ${SOURCE_DIR}/README)
-set(PROJECT_CHANGELOG ${SOURCE_DIR}/CHANGELOG)
-set(PROJECT_DEFAULT_CONF ${SOURCE_DIR}/wmfsrc)
-
-# installs
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
-if(WITH_LOGOS)
-  set(PROJECT_LOGOS ${PROJECT_DATA_PATH}/logos)
-  set(PROJECT_LOGOS_DIR ${SOURCE_DIR}/logos)
-  install(DIRECTORY ${PROJECT_LOGOS_DIR} DESTINATION ${PROJECT_DATA_PATH})
-  message("Install With logos")
-endif()
-if(GENERATE_MANPAGES)
-      install(FILES ${WMFS_MAN1_FILES} DESTINATION ${WMFS_MAN_PATH}/man1)
-endif()
-install(FILES ${PROJECT_TODO} ${PROJECT_README} ${PROJECT_CHANGELOG}
-  ${PROJECT_DEFAULT_CONF} DESTINATION ${PROJECT_DATA_PATH})
-
-
 # Remplace strings in configs
 set(WMFS_VERSION ${VERSION})
 set(WMFS_COMPILE_MACHINE ${CMAKE_SYSTEM_PROCESSOR})
@@ -219,4 +198,25 @@ endmacro()
 foreach(file ${wmfs_configure_files})
     a_configure_file(${file})
 endforeach()
+
+set(PROJECT_DATA_PATH share/${PROJECT_NAME})
+set(PROJECT_TODO ${SOURCE_DIR}/TODO)
+set(PROJECT_README ${SOURCE_DIR}/README)
+set(PROJECT_CHANGELOG ${SOURCE_DIR}/CHANGELOG)
+set(PROJECT_DEFAULT_CONF ${SOURCE_DIR}/wmfsrc)
+
+# installs
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+if(WITH_LOGOS)
+  set(PROJECT_LOGOS ${PROJECT_DATA_PATH}/logos)
+  set(PROJECT_LOGOS_DIR ${SOURCE_DIR}/logos)
+  install(DIRECTORY ${PROJECT_LOGOS_DIR} DESTINATION ${PROJECT_DATA_PATH})
+  message("Install With logos")
+endif()
+if(GENERATE_MANPAGES)
+      install(FILES ${WMFS_MAN1_FILES} DESTINATION ${WMFS_MAN_PATH}/man1)
+endif()
+install(FILES ${PROJECT_TODO} ${PROJECT_README} ${PROJECT_CHANGELOG}
+  ${PROJECT_DEFAULT_CONF} DESTINATION ${PROJECT_DATA_PATH})
+install(FILES ${PROJECT_DEFAULT_CONF} DESTINATION ${WMFS_SYSCONFDIR})
 
