--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
+cmake_uninstall.cmake
 Makefile
 *.o
 .*.sw?
@@ -10,6 +11,7 @@ CHANGELOG
 config.h
 #*
 \#*
+wmfs.1
 wmfs.1.gz
 wmfs.1.xml
 build/
