--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(wmfs_src
 # Set the executable from the wmfs_src
 add_executable(wmfs ${wmfs_src})
 # Set the version - NOT USED AT THE MOMENT
-set(VERSION wmfs-devel)
+set(VERSION WMFS-0.1rc1)
 # CFLAGS
 set(CFLAGS "-g -Wall")
 set(CMAKE_C_FLAGS ${CFLAGS})
