--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,8 @@ set(wmfs_src
   wmfs.c
   config.c
   event.c
-  util.c)
+  util.c
+  layout.c)
 
 # Set the executable from the wmfs_src
 add_executable(wmfs ${wmfs_src})
