--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,7 +194,8 @@ set(WMFS_SYSCONFDIR ${XDG_CONFIG_DIR}/${PROJECT_NAME})
 
 # Configure files
 set(wmfs_configure_files
-  config.h.in)
+  config.h.in
+  wmfs.1.txt.in)
 
 macro(a_configure_file file)
     string(REGEX REPLACE ".in\$" "" outfile ${file})
