--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,6 @@
 /*
 *      config.h
-*      Copyright © 2008 Martin Duquesnoy <xorg62@gmail.con>
+*      Copyright © 2008 Martin Duquesnoy <xorg62@gmail.com>
 *      All rights reserved.
 *
 *      Redistribution and use in source and binary forms, with or without
