CMake: Fix config.h: No such file or directory
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,7 +216,7 @@ set(WMFS_SYSCONFDIR ${XDG_CONFIG_DIR}/${PROJECT_NAME})
 
 # Configure files
 set(wmfs_configure_files
-  config.h.in
+  src/config.h.in
   wmfs.1.txt.in)
 
 macro(a_configure_file file)
