Manpage: update bug section
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/wmfs.1.txt.in
+++ b/wmfs.1.txt.in
@@ -90,6 +90,7 @@ WMFS is configured by '$HOME/.config/wmfs/wmfsrc'.
 BUGS
 ----
 WMFS isn't stable for now. So it certainly contains some bugs.
+WMFS doesn't compile in FreeBSD.
 
 AUTHORS
 -------
