Manpage: remove (not so)
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/wmfs.1.txt.in
+++ b/wmfs.1.txt.in
@@ -16,7 +16,7 @@ SYNOPSIS
 DESCRIPTION
 -----------
 
-*WMFS* is a (not so) basic, lightweight and dynamic tiling windows manager for X.
+*WMFS* is a basic, lightweight and dynamic tiling windows manager for X.
 
 
 OPTIONS
