Manpage: add bugtracker url
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/wmfs.1.txt.in
+++ b/wmfs.1.txt.in
@@ -101,7 +101,8 @@ Youssef Bocus <ydb.feu@gmail.com> for hard testing.
 
 WWW
 ---
-http://wmfs.sangor.net/
+Main site: http://wmfs.sangor.net/
+Bug tracker: https://dev.tux-atome.fr/projects/show/wmfs
 
 COPYING
 -------
