all: Massive change: new way for window management, use frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(wmfs_src
   src/bar.c
   src/draw.c
   src/client.c
-  src/titlebar.c
+  src/frame.c
   src/infobar.c)
 
 # Set the executable from the wmfs_src
