CMake: Fix CHANGELOG bug in released version.   - If the dir is a git tree CHANGELOG is generated from 'git log'   - If the dir is'nt a git tree, a 'touch CHANGELOG' is made.
Signed-off-by: Marc Lagrange <markocpc@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,7 +121,7 @@ a_find_program(CAT_EXECUTABLE cat TRUE)
 if(EXISTS ${SOURCE_DIR}/.git/HEAD AND GIT_EXECUTABLE)
 
   # generate
-message("Generating changelog...")
+message("Git dir -- Generating changelog...")
 execute_process(
   COMMAND ${GIT_EXECUTABLE} log
   WORKING_DIRECTORY ${SOURCE_DIR}
@@ -129,6 +129,14 @@ execute_process(
   )
 set(CHANGELOG_FILE ${SOURCE_DIR}/CHANGELOG)
 file(WRITE ${CHANGELOG_FILE} ${WMFS_CHANGELOG})
+
+else()
+
+message("Non-Git dir -- Generating fake changelog")
+execute_process(
+  COMMAND touch ${SOURCE_DIR}/CHANGELOG
+  )
+
 endif()
 
 # {{{ Check if documentation can be build
