Fix typo in doxygen config

--- a/wmfs.doxygen.in
+++ b/wmfs.doxygen.in
@@ -73,7 +73,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @SOURCE_DIR@/src@
+INPUT                  = @SOURCE_DIR@/src
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.c \
                          *.h \
