barwin: Rename bar.c -> barwin.c and all the bar.c function bar_* -> barwin_*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ project(${PROJECT_NAME} C)
 
 # Definition of the wmfs source
 set(wmfs_src
-  src/bar.c
+  src/barwin.c
   src/client.c
   src/config.c
   src/draw.c
