--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,8 +99,7 @@ pkg_check_modules(wmfs_required
   x11
   libconfuse
   freetype2
-  xft
-  xinerama)
+  xft)
 
 # Find exterbal programs
 macro(a_find_program var prg req)
